--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,6 +16,21 @@
                 <%= link_to "View articles", articles_path, class:"dropdown-item" %>
             </div>
             </li>
+            <% if logged_in? %>
+                <li class="nav-item">
+                    <%= link_to 'Logout', logout_path, class: "nav-link", method: :delete %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to 'Profile', user_path(current_user), class: "nav-link" %>
+                </li>
+            <% else %>
+                <li class="nav-item">
+                    <%= link_to "Log in", login_path, class: "nav-link" %>
+                </li>
+                    <li class="nav-item">
+                        <%= link_to "Sign Up", signup_path, class: "nav-link" %>
+                    </li>
+            <% end %>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
