--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,14 @@
 <h1 class="text-center mt-4"><%= @user.username %>'s profile</h1>
 <%= gravatar_for @user, size: 200 %>
-<div class = "text-center mt-4">
-    <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" %>
-</div>
-<h3 class="text-center mt-4">Articles</h3>
+<% if current_user == @user %>
+  <div class = "text-center mt-4">
+      <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" %>
+  </div>
+<% end %>
+  <h3 class="text-center mt-4">Articles</h3>
 
 <div class="flickr_pagination">
   <%= will_paginate @articles, :container => false %>
-</div>
+</div> 
 
 <%= render 'articles/article' %>
