--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,8 +21,13 @@
                     <%= link_to 'Logout', logout_path, class: "nav-link", method: :delete %>
                 </li>
                 <li class="nav-item">
-                    <%= link_to 'Profile', user_path(current_user), class: "nav-link" %>
+                    <%= link_to 'Your Profile', user_path(current_user), class: "nav-link" %>
                 </li>
+                <% if current_user.admin? %>
+                    <li class="nav-item">
+                        <p class="nav-link">(Admin)</p>
+                    </li>
+                <% end %>
             <% else %>
                 <li class="nav-item">
                     <%= link_to "Log in", login_path, class: "nav-link" %>
