--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,9 +17,10 @@
                             <%= link_to gravatar_for(user, size: 150), user %>
                         </h5>
                         <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
-                        <% if current_user == user %>
+                        <% if current_user == user || current_user.admin? %>
                             <%= link_to "View profile", user, class: "btn btn-outline-success" %>
                             <%= link_to "Edit profile", edit_user_path(user), class: "btn btn-outline-info" %>
+                            <%= link_to "Delete profile", user_path(user), method: :delete, data: {confirm:"Are you sure you want to delete this user and all their articles?"}, class: "btn btn-outline-danger" %>
                         <% end %>    
                         </div>
                     <div class="card-footer text-muted">
