--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-center mt-4"><%= @user.username %>'s profile</h1>
 <%= gravatar_for @user, size: 200 %>
-<% if current_user == @user %>
+<% if logged_in? && (current_user == @user || current_user.admin?) %>
   <div class = "text-center mt-4">
       <%= link_to "Edit your profile", edit_user_path(@user), class: "btn btn-outline-info" %>
   </div>
