--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,12 +10,25 @@
                 <%= link_to "Bloggers", users_path, class: "nav-link" %>
             </li>
             <li class="nav-item dropdown">
-             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Articles</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <%= link_to "Create new article", new_article_path, class:"dropdown-item" %>
-                <%= link_to "View articles", articles_path, class:"dropdown-item" %>
-            </div>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Articles</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <%= link_to "Create new article", new_article_path, class:"dropdown-item" %>
+                    <%= link_to "View articles", articles_path, class:"dropdown-item" %>
+                </div>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <%= link_to "All categories", categories_path, class:"dropdown-item" %>
+                    <% Category.all.each do |category| %>
+                        <%= link_to "#{category.name}", category_path(category), class: "dropdown-item" %>
+                    <% end %>
+                    <% if logged_in? && current_user.admin? %>
+                        <hr>
+                        <%= link_to "Create new category", new_category_path, class:"dropdown-item" %>
+                    <% end %>
+                </div>
+           </li>
             <% if logged_in? %>
                 <li class="nav-item">
                     <%= link_to 'Logout', logout_path, class: "nav-link", method: :delete %>
