Fixed article partial and add categories partial

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,4 +11,4 @@
   <%= will_paginate @articles, :container => false %>
 </div> 
 
-<%= render 'articles/article' %>
+<%= render 'articles/article', obj: @articles %>
