--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <% @articles.each do |article| %>
+    <% obj.each do |article| %>
         <div class="row justify-content-md-center">
             <div class="col-8 mt-4">
                 <div class="card text-center shadow mb-5 bg-white rounded">
@@ -10,6 +10,9 @@
                         <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
                         <p class="card-text"><%= truncate(article.description, length: 100) %></p>
                         <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
+                        <% if article.categories.any? %>
+                            <p class="mt-2">Categories: <%= render article.categories %></p>
+                        <% end %>
                         <% if logged_in? && (current_user == article.user || current_user.admin?) %>
                             <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
                             <%= link_to "Delete", article_path(article), class: "btn btn-outline-danger", method: :delete, data:{confirm: "Are you sure?"} %>
