--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,6 +15,13 @@
                         <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description of article" %>
                     </div>
                 </div>
+                <div class="form-group row">
+                    <div class="col-12 form-check pl-3 form-check-inline">
+                        <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+                            <% cb.label(class: "form-check-label text-light pr-3") {cb.check_box(class:"form-check-input") + cb.text} %> 
+                        <% end %>
+                    </div>
+                </div>
                 <div class="form-group row justify-content-center">
                     <%= f.submit class: "btn btn-outline-light btn-lg" %>
                 </div>
