--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,6 +9,9 @@
                 </div>
                 <div class="card-body">
                     <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+                    <% if @article.categories.any? %>
+                        <p>Categories: <%= render @article.categories  %></p>
+                    <% end %>
                     <% if logged_in? && current_user == @article.user %>
                         <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
                         <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete, data:{confirm: "Are you sure?"} %>
