--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,13 +4,13 @@
   <%= will_paginate @categories, :container => false %>
 </div>
 
-<div class="container">
+<div class="container mb-4">
     <% @categories.each do |category| %>
         <div class="row justify-content-md-center">
-            <div class="col-8 mt-4">
-                <div class="card text-center shadow mb-5 bg-white rounded">
+            <div class="col-6 mt-4">
+                <div class="card text-center shadow bg-white rounded">
                     <div class="card-body">
-                        <%= link_to "#{category.name}", category_path(category) %></br>
+                        <h4 class="m-0"><%= link_to "#{category.name}", category_path(category) %></h4>
                         <small><%= pluralize(category.articles.count, "article") %></small>
                     </div>
                 </div>
